plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation(
            'io.rest-assured:rest-assured:4.4.0',
            'org.junit.jupiter:junit-jupiter:5.4.2',
            'io.rest-assured:json-schema-validator:4.4.0',
            'org.junit.jupiter:junit-jupiter-params:5.8.1'
    )

    test {
        useJUnitPlatform()
    }
}
sourceCompatibility = JavaVersion.VERSION_1_9
targetCompatibility = JavaVersion.VERSION_1_9
